--- a/code/ldpc_multiStream/CMakeLists.txt
+++ b/code/ldpc_multiStream/CMakeLists.txt
@@ -9,7 +9,7 @@ ${CMAKE_SOURCE_DIR}
 )
 
 link_directories(
-"/usr/local/cuda/lib64/"
+"/usr/local/cuda/lib/"
 )
 
 # set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-Wall")
@@ -19,7 +19,7 @@ set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-Wall  -fopenmp")
 set(CUDA_NVCC_FLAGS
     ${CUDA_NVCC_FLAGS}
     -O2
-    -arch=sm_50
+    -arch=sm_32
     )
 
 set(srcs
