--- a/code/gpu_fixed/CMakeLists.txt
+++ b/code/gpu_fixed/CMakeLists.txt
@@ -13,17 +13,16 @@ link_directories(
 )
 
 # set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-Wall")
-set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-Wall  -fopenmp")
+set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-Wall  -fopenmp  -O3 -march=native -m64")
 
 # Pass options to NVCC
 set(CUDA_NVCC_FLAGS
     ${CUDA_NVCC_FLAGS}
-    -O2
     -arch=sm_50
     )
 
 set(srcs
-	main.cpp
+	test.cpp
 	awgn_channel/CChanel.cpp
 	ber_analyzer/CErrorAnalyzer.cpp
 	terminal/CTerminal.cpp
