--- a/code/gpu_fixed/CMakeLists.txt
+++ b/code/gpu_fixed/CMakeLists.txt
@@ -14,6 +14,7 @@ link_directories(
 
 # set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-Wall")
 set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-Wall  -fopenmp  -O3 -march=native -m64 -finline -funroll-loops")
+# set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-Wall -fopenmp -O3 -march=native -mtune=cortex-a15 -marm -mfpu=neon -finline -funroll-loops -flax-vector-conversions")
 
 # Pass options to NVCC
 set(CUDA_NVCC_FLAGS
